--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@storybook/addon-storysource": "^5.2.6",
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
@@ -107,6 +108,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
     "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-info": "^5.2.6",
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
