--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
     "@storybook/addon-actions": "^5.2.6",
+    "@storybook/addon-docs": "^5.2.6",
     "@storybook/addon-info": "^5.2.6",
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addons": "^5.2.6",
