--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,13 @@ after_success: 'npm run coveralls'
 cache:
   directories:
     - node_modules
+
+deploy:
+  provider: pages
+  local_dir: build
+  target_branch: gh-pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  on:
+    branch: pages-setup
