--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,9 @@ deploy:
   local_dir: build
   target_branch: gh-pages
   cleanup: true
-  github_token: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   keep_history: true
   on:
     branch: master
+
+os: linux
