--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
   provider: pages
   local_dir: build
   target_branch: gh-pages
-  cleanup: true
+  cleanup: false
   token: $GITHUB_TOKEN
   keep_history: true
   on:
