--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "lint:staged": "lint-staged",
     "pretest": "npm run test:clean && npm run lint",
     "test:clean": "rimraf ./coverage",
-    "test": "cross-env NODE_ENV=test jest --coverage",
-    "test:watch": "cross-env NODE_ENV=test jest --watchAll",
+    "test": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'jest --coverage'",
+    "test:watch": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'jest --watchAll'",
+    "test:api": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'mocha --watch --watch-extensions ts -r ts-node/register app/api/tests/**/*.spec.ts'",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prettify": "prettier --write",
     "storybook": "start-storybook -p 6006",
@@ -66,14 +67,15 @@
     "babel-core": "7.0.0-bridge.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.7.4",
     "@babel/polyfill": "7.4.3",
-    "@storybook/addon-storysource": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.8",
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
-    "firebase": "^7.5.0",
+    "firebase": "^7.6.0",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
@@ -95,7 +97,8 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -108,12 +111,19 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
-    "@storybook/addon-actions": "^5.2.6",
-    "@storybook/addon-docs": "^5.2.6",
-    "@storybook/addon-info": "^5.2.6",
-    "@storybook/addon-links": "^5.2.6",
-    "@storybook/addons": "^5.2.6",
-    "@storybook/react": "^5.2.6",
+    "@firebase/testing": "^0.16.3",
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-docs": "^5.2.8",
+    "@storybook/addon-info": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
+    "@types/chai": "^4.2.7",
+    "@types/chai-datetime": "0.0.33",
+    "@types/jest": "^24.0.23",
+    "@types/lodash": "^4.14.149",
+    "@types/mocha": "^5.2.7",
+    "@types/uuid": "^3.4.6",
     "add-asset-html-webpack-plugin": "3.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -123,6 +133,8 @@
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "chai": "^4.2.0",
+    "chai-datetime": "^1.5.0",
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
     "compression-webpack-plugin": "2.0.0",
@@ -149,6 +161,7 @@
     "jest-styled-components": "6.3.1",
     "jquery": "^3.4.1",
     "lint-staged": "8.1.5",
+    "mocha": "^6.2.2",
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
     "null-loader": "0.1.1",
@@ -168,6 +181,9 @@
     "stylelint-processor-styled-components": "1.6.0",
     "svg-url-loader": "2.3.2",
     "terser-webpack-plugin": "1.2.3",
+    "ts-jest": "^24.2.0",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.3",
     "url-loader": "1.1.2",
     "webpack": "4.30.0",
     "webpack-cli": "3.3.0",
