implement articles.update

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
     "@types/chai": "^4.2.7",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/chai-datetime": "0.0.33",
     "@types/jest": "^24.0.23",
     "@types/lodash": "^4.14.149",
@@ -134,6 +135,7 @@
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-datetime": "^1.5.0",
     "circular-dependency-plugin": "5.0.2",
     "compare-versions": "3.4.0",
