--- a/package.json
+++ b/package.json
@@ -90,18 +90,21 @@
     "minimist": "1.2.3",
     "normalize.css": "^8.0.1",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
+    "react": "^16.12.0",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
-    "react-redux": "7.0.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
+    "remark-iframes": "^4.0.4",
+    "remark-parse": "^7.0.2",
+    "remark-react": "^6.0.0",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0",
-    "uuid": "^3.4.0"
+    "styled-components": "^5.0.1",
+    "unified": "^8.4.2"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -114,7 +117,7 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
-    "@firebase/testing": "^0.16.14",
+    "@firebase/testing": "^0.19.2",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-docs": "^5.3.18",
     "@storybook/addon-info": "^5.3.18",
@@ -163,7 +166,7 @@
     "imports-loader": "0.8.0",
     "jest-cli": "24.7.1",
     "jest-dom": "3.1.3",
-    "jest-styled-components": "6.3.1",
+    "jest-styled-components": "^7.0.0",
     "jquery": "^3.5.0",
     "lint-staged": "8.1.5",
     "mocha": "^6.2.3",
@@ -191,7 +194,8 @@
     "typescript": "^3.8.3",
     "url-loader": "1.1.2",
     "webpack": "4.30.0",
-    "webpack-cli": "3.3.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.3",
     "whatwg-fetch": "3.0.0"
