--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pretest": "npm run test:clean && npm run lint",
     "test:clean": "rimraf ./coverage",
     "test": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'jest --coverage'",
-    "test:watch": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'jest --watchAll'",
+    "test:watch": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'jest --watch'",
     "test:api": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'mocha --watch --watch-extensions ts -r ts-node/register app/api/tests/**/*.spec.ts'",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prettify": "prettier --write",
@@ -75,7 +75,7 @@
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
-    "firebase": "^7.6.0",
+    "firebase": "^7.13.2",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
@@ -111,7 +111,7 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
-    "@firebase/testing": "^0.16.3",
+    "@firebase/testing": "^0.16.14",
     "@storybook/addon-actions": "^5.2.8",
     "@storybook/addon-docs": "^5.2.8",
     "@storybook/addon-info": "^5.2.8",
