--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "lodash": "^4.17.15",
+    "mime-types": "^2.1.26",
     "minimist": "1.2.0",
     "normalize.css": "^8.0.1",
     "prop-types": "15.7.2",
