Travis runs api test for api branches

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ services:
 
 script:
   - node ./internals/scripts/generate-templates-for-linting
-  - npm test -- --maxWorkers=4
-  - npm run build
+  - npm run api:test
 
 before_install:
   - export CHROME_BIN=chromium-browser
