--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "lint:staged": "lint-staged",
     "pretest": "npm run test:clean && npm run lint",
     "test:clean": "rimraf ./coverage",
-    "test": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'jest --coverage'",
-    "test:watch": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'jest --watch'",
-    "test:api": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'mocha --watch --watch-extensions ts -r ts-node/register app/api/tests/**/*.spec.ts'",
+    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test:watch": "cross-env NODE_ENV=test jest --watchAll",
+    "test:api": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'mocha --exit -r ts-node/register app/api/tests/**/*.spec.ts'",
+    "test:api:watch": "cross-env NODE_ENV=test firebase emulators:exec --only firestore 'mocha --watch --watch-extensions ts -r ts-node/register app/api/tests/**/*.spec.ts'",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prettify": "prettier --write",
     "storybook": "start-storybook -p 6006",
