typo fix: 'npm run api:test' -> 'npm run test:api' in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 
 script:
   - node ./internals/scripts/generate-templates-for-linting
-  - npm run api:test
+  - npm run test:api
 
 before_install:
   - export CHROME_BIN=chromium-browser
